# matalign-reference-audit

./: .gitignore  CHECKSUMS.sha256  LICENSE  MANIFEST.csv  README.md  pyproject.toml
configs/: project.toml
scripts/: phase10_build_mp2020_references.py  phase10_primary_pbe_qc.py  phase10_select_pbe_validation_materials.py  phase11_model_saturation.py  phase11_v3_analysis_master.py  phase12_d2_database_relative_errors.py  phase12_d2_element_headroom_map.py  phase12_d2_frontier_model_summary.py  phase12_d2_report.py  phase12_d2_training_leakage.py  phase12_d2fix_analysis.py  phase12_d3_analysis.py  phase12_d3fix_analysis.py  phase13_wbm_e1_validation.py  phase14_phase_f_nc_upgrade.py  phase14_phase_f_required_supplements.py  phase1_build_elements.py  phase23_compute_metrics.py  phase2_build_matalign.py  phase34_recompute_audit.py  phase46_analysis.py
src/materials_fairness_audit/: __init__.py  cli.py  composition_distance.py  config.py  databases.py  download.py  elements.py  io_utils.py  matalign.py  metrics.py  nature_readiness.py  oqmd_dump.py  phase0.py  quality_reports.py
